@@ -455,6 +455,7 @@ jQuery(document).ready(function ($) {
     }
 })(jQuery);
 /*global jQuery */
+/*jshint multistr:true browser:true */
 /*!
 * FitVids 1.0
 *
@@ -467,10 +468,12 @@ jQuery(document).ready(function ($) {
 
 (function( $ ){
 
+  "use strict";
+
   $.fn.fitVids = function( options ) {
     var settings = {
       customSelector: null
-    }
+    };
 
     var div = document.createElement('div'),
         ref = document.getElementsByTagName('base')[0] || document.getElementsByTagName('script')[0];
@@ -504,6 +507,7 @@ jQuery(document).ready(function ($) {
       var selectors = [
         "iframe[src*='player.vimeo.com']",
         "iframe[src*='www.youtube.com']",
+        "iframe[src*='www.youtube-nocookie.com']",
         "iframe[src*='www.kickstarter.com']",
 		"iframe[src*='fast.wistia.com']",
         "object",
@@ -518,9 +522,9 @@ jQuery(document).ready(function ($) {
 
       $allVideos.each(function(){
         var $this = $(this);
-        if (this.tagName.toLowerCase() == 'embed' && $this.parent('object').length || $this.parent('.fluid-width-video-wrapper').length) { return; }
-        var height = ( this.tagName.toLowerCase() == 'object' || $this.attr('height') ) ? $this.attr('height') : $this.height(),
-            width = $this.attr('width') ? $this.attr('width') : $this.width(),
+        if (this.tagName.toLowerCase() === 'embed' && $this.parent('object').length || $this.parent('.fluid-width-video-wrapper').length) { return; }
+        var height = ( this.tagName.toLowerCase() === 'object' || ($this.attr('height') && !isNaN(parseInt($this.attr('height'), 10))) ) ? parseInt($this.attr('height'), 10) : $this.height(),
+            width = !isNaN(parseInt($this.attr('width'), 10)) ? parseInt($this.attr('width'), 10) : $this.width(),
             aspectRatio = height / width;
         if(!$this.attr('id')){
           var videoID = 'fitvid' + Math.floor(Math.random()*999999);
@@ -530,9 +534,8 @@ jQuery(document).ready(function ($) {
         $this.removeAttr('height').removeAttr('width');
       });
     });
-  }
+  };
 })( jQuery );
-
 /*! Responsive Menu */
 
 /*! http://tinynav.viljamis.com v1.1 by @viljamis */
