@@ -1,14 +1,14 @@
 /* 
 Theme Name: Responsive 
 Theme URI: http://themeid.com/responsive-theme/ 
-Description: Responsive Theme is a flexible foundation with fluid grid system that adapts your website to mobile devices and the desktop or any other viewing environment. Theme features 9 Page Templates, 11 Widget Areas, 6 Template Layouts, 4 Menu Positions and more. Powerful but simple Theme Options for full CMS control with easy Logo Upload, Social Networking and Webmaster Tools etc. Responsive is WooCommerce Compatible, Multilingual Ready (WPML), RTL-Language Support, Retina-Ready, W3C Markup Validated and currently translated into 34 languages. Cross-Browser compatible and yes even the IE7. No paid memberships or clubs to get a FREE/Responsive Support you need. http://themeid.com/support
+Description: Responsive Theme is a flexible foundation with fluid grid system that adapts your website to mobile devices and the desktop or any other viewing environment. Theme features 9 Page Templates, 11 Widget Areas, 6 Template Layouts, 4 Menu Positions and more. Powerful but simple Theme Options for full CMS control with easy Logo Upload, Social Networking and Webmaster Tools etc. Responsive is WooCommerce Compatible, Multilingual Ready (WPML), RTL-Language Support, Retina-Ready, W3C Markup Validated and currently translated into 34 languages. Cross-Browser compatible and yes even the IE7. No paid memberships or clubs to get a FREE/Responsive Support you need. http://themeid.com/support/
 
-Version: 1.8.3
+Version: 1.8.4
 Author: ThemeID 
 Author URI: http://themeid.com
 Tags: white, black, gray, light, custom-menu, custom-header, custom-background, one-column, two-columns, left-sidebar, right-sidebar, flexible-width, theme-options, threaded-comments, full-width-template, sticky-post, translation-ready, flexible-width, rtl-language-support
 
-License: GNU General Public License
+License: GNU General Public License v3 or later
 License URI: license.txt 
 
 Responsive WordPress Theme, Copyright (C) 2003-2012 Emil Uzelac 
@@ -170,6 +170,8 @@ pre {
 	padding: 6px 10px;
 	vertical-align: middle;
     width: 100%;
+    word-wrap: break-word;
+    white-space: pre-wrap;
 }
 
 del {
@@ -1303,22 +1305,26 @@ form div {
 /* =Author Meta (Author's Box)
 -------------------------------------------------------------- */
 #author-meta {
+    -moz-border-radius: 6px;
+    -webkit-border-radius: 6px;
 	background: #f9f9f9;
 	border: 1px solid #d6d6d6;
+    border-radius: 6px;
 	clear: both;
 	display: block;
-	margin: 20px 0;
+	margin: 30px 0 40px 0;
+    padding: 10px;
 	overflow: hidden;
 }
 
 #author-meta img {
 	float: left;
-	padding: 10px;
+	padding: 10px 15px 0 5px;
 }
 
 #author-meta p {
-	margin-top: 5px;
-	padding: 0 5px 0 0;
+    margin: 0;
+	padding: 5px;
 }
 
 #author-meta .about-author {
